--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,11 +17,87 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: black;
+  color: white;
 }
+
+.text {
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.topCalculas {
+  background-color: #908080;
+  border-radius: 100%;
+  height: 80px;
+  width: 80px;
+}
+
+.leftCalculas {
+  background-color: #ea9d2b;
+  border-radius: 100%;
+  height: 80px;
+  width: 80px;
+}
+
+.calculas {
+  background-color: #3a3834;
+  border-radius: 100%;
+  height: 80px;
+  width: 80px;
+}
+
+.calculasZero {
+  background-color: #3a3834;
+  border-radius: 100px;
+  height: 80px;
+  width: 350px;
+  padding-left: 30px;
+  text-align: left;
+}
+
+.leftCalculas:hover:active {
+  color: #ea9d2b;
+  background-color: white;
+}
+
+.calculas:hover:active,
+.calculasZero:hover:active,
+.topCalculas:hover:active {
+  color: black;
+}
+
+.calculas:hover:active,
+.calculasZero:hover:active,
+.topCalculas:hover:active {
+  background-color: #b1abab;
+}
+
+/* desktop */
+/* @media (min-width: 1024px) {
+  .text {
+    font-size: 40px;
+    font-weight: 500;
+  }
+
+  .topCalculas {
+    height: 100px;
+    width: 100px;
+  }
+
+  .leftCalculas {
+    height: 100px;
+    width: 100px;
+  }
+
+  .calculas {
+    height: 100px;
+    width: 100px;
+  }
+
+  .calculasZero {
+    height: 100px;
+    width: 400px;
+    padding-left: 40px;
+  }
+} */
