--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,29 +29,29 @@ body {
 .topCalculas {
   background-color: #908080;
   border-radius: 100%;
-  height: 80px;
-  width: 80px;
+  height: 60px;
+  width: 60px;
 }
 
 .leftCalculas {
   background-color: #ea9d2b;
   border-radius: 100%;
-  height: 80px;
-  width: 80px;
+  height: 60px;
+  width: 60px;
 }
 
 .calculas {
   background-color: #3a3834;
   border-radius: 100%;
-  height: 80px;
-  width: 80px;
+  height: 60px;
+  width: 60px;
 }
 
 .calculasZero {
   background-color: #3a3834;
   border-radius: 100px;
   height: 80px;
-  width: 350px;
+  width: 300px;
   padding-left: 30px;
   text-align: left;
 }
@@ -74,30 +74,30 @@ body {
 }
 
 /* desktop */
-/* @media (min-width: 1024px) {
+@media (min-width: 768px) {
   .text {
     font-size: 40px;
     font-weight: 500;
   }
 
   .topCalculas {
-    height: 100px;
-    width: 100px;
+    height: 80px;
+    width: 80px;
   }
 
   .leftCalculas {
-    height: 100px;
-    width: 100px;
+    height: 80px;
+    width: 80px;
   }
 
   .calculas {
-    height: 100px;
-    width: 100px;
+    height: 80px;
+    width: 80px;
   }
 
   .calculasZero {
-    height: 100px;
-    width: 400px;
+    height: 80px;
+    width: 300px;
     padding-left: 40px;
   }
-} */
+}
